<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Builder;
use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Relations\HasMany;
use Illuminate\Database\Eloquent\Relations\HasManyThrough;
use Illuminate\Database\Eloquent\Relations\HasOne;
use Illuminate\Foundation\Auth\User as Authenticatable;

class User extends Authenticatable
{
    use HasFactory;

    public const ROLE_ADMIN = 'admin';

    public const ROLE_DRIVER = 'driver';

    public const ROLE_TRAVELER = 'traveler';

    protected $fillable = [
        'first_name',
        'last_name',
        'email',
        'phone',
        'password_hash',
        'profile_photo',
        'email_verified',
        'phone_verified',
        'account_status',
        'role',
        'suspended_at',
    ];

    protected $hidden = [
        'password_hash',
        'remember_token',
    ];

    protected function casts(): array
    {
        return [
            'email_verified' => 'boolean',
            'phone_verified' => 'boolean',
            'password_hash' => 'hashed',
            'suspended_at' => 'datetime',
        ];
    }

    public function getAuthPassword(): string
    {
        return $this->password_hash;
    }

    public function getAuthPasswordName(): string
    {
        return 'password_hash';
    }

    public function scopeRole(Builder $query, string $role): Builder
    {
        return $query->where('role', $role);
    }

    public function isAdmin(): bool
    {
        return $this->role === self::ROLE_ADMIN;
    }

    public function isDriver(): bool
    {
        return $this->role === self::ROLE_DRIVER;
    }

    public function isTraveler(): bool
    {
        return $this->role === self::ROLE_TRAVELER;
    }

    public function dashboardRoute(): string
    {
        return match ($this->role) {
            self::ROLE_ADMIN => 'dashboards.admin',
            self::ROLE_DRIVER => 'dashboards.driver',
            default => 'dashboards.traveler',
        };
    }

    public function driverProfile(): HasOne
    {
        return $this->hasOne(DriverProfile::class);
    }

    public function rides(): HasManyThrough
    {
        return $this->hasManyThrough(
            Ride::class,
            DriverProfile::class,
            'user_id',
            'driver_profile_id',
            'id',
            'id',
        );
    }

    public function bookings(): HasMany
    {
        return $this->hasMany(Booking::class, 'traveler_id');
    }

    public function writtenReviews(): HasMany
    {
        return $this->hasMany(Review::class, 'traveler_id');
    }

    public function receivedReviews(): HasManyThrough
    {
        return $this->hasManyThrough(
            Review::class,
            DriverProfile::class,
            'user_id',
            'driver_profile_id',
            'id',
            'id',
        );
    }

    public function notifications(): HasMany
    {
        return $this->hasMany(Notification::class);
    }

    public function mobileApiTokens(): HasMany
    {
        return $this->hasMany(MobileApiToken::class);
    }
}
