@startuml
' Final Class Diagram - BlasaCar

left to right direction
skinparam dpi 200
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam defaultFontSize 16
skinparam classFontSize 18
skinparam classAttributeFontSize 15

skinparam class {
  BackgroundColor White
  BorderColor Black
  ArrowColor Black
  HeaderBackgroundColor #D9EBFF
}

skinparam enum {
  BackgroundColor #EEF8E8
  BorderColor Black
}

' =======================
' Enums
' =======================

enum UserRole {
  admin
  driver
  traveler
}

enum AccountStatus {
  active
  suspended
}

enum RideStatus {
  scheduled
  completed
  cancelled
}

enum BookingStatus {
  pending
  confirmed
  rejected
  cancelled
  completed
}

enum NotificationChannel {
  in_app
  whatsapp
}

enum NotificationDeliveryStatus {
  pending
  sent
  failed
}

' =======================
' Classes
' =======================

class User {
  id : bigint
  first_name : string
  last_name : string
  email : string
  phone : string
  password_hash : string
  profile_photo : string?
  email_verified : boolean
  phone_verified : boolean
  role : UserRole
  account_status : AccountStatus
  suspended_at : datetime?
}

class DriverProfile {
  id : bigint
  cin_number : string
  cin_front_photo : string
  cin_back_photo : string
  cin_verified : boolean
}

class Vehicle {
  id : bigint
  brand : string
  model : string
  photo : string?
}

class Ride {
  id : bigint
  departure_time : datetime
  total_seats : int
  meeting_point : string
  notes : text?
  admin_note : text?
  status : RideStatus
  price_per_seat : decimal(10,2)
}

class Booking {
  id : bigint
  seats_reserved : int
  status : BookingStatus
  booked_at : datetime
}

class Review {
  id : bigint
  rating : tinyint
  comment : text?
}

class City {
  id : bigint
  name : string
}

class Notification {
  id : bigint
  type : string
  channel : NotificationChannel
  title : string
  message : text
  recipient_phone : string?
  delivery_status : NotificationDeliveryStatus?
  sent_at : datetime?
  is_read : boolean
}

' =======================
' Relationships
' =======================

User "1" -- "0..1" DriverProfile : has
DriverProfile "1" -- "1" Vehicle : owns
DriverProfile "1" -- "0..*" Ride : publishes

User "1" -- "0..*" Booking : makes
Ride "1" -- "0..*" Booking : has
Booking "1" -- "0..1" Review : receives

User "1" -- "0..*" Notification : receives

City "1" -- "0..*" Ride : departure
City "1" -- "0..*" Ride : arrival

' =======================
' Enum usage dependencies
' =======================

User ..> UserRole
User ..> AccountStatus
Ride ..> RideStatus
Booking ..> BookingStatus
Notification ..> NotificationChannel
Notification ..> NotificationDeliveryStatus

@enduml